objects/disco__UserPreferences__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>user preferences for youreka</description>
    <fields>
        <fullName>disco__Hide_Disco_Rules_Group_Intro__c</fullName>
        <defaultValue>false</defaultValue>
        <description>hides discovery rules group page into text</description>
        <inlineHelpText>hides discovery rules group page into text</inlineHelpText>
        <label>Hide Discovery Rules Group Intro</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>disco__Hide_Disco_Rules_Intro__c</fullName>
        <defaultValue>false</defaultValue>
        <description>hides discovery rules page into text</description>
        <inlineHelpText>hides discovery rules page into text</inlineHelpText>
        <label>Hide Discovery Rules Intro</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>disco__Hide_Form_Builder_Intro__c</fullName>
        <defaultValue>false</defaultValue>
        <description>hides intro text on the first page of the form builder</description>
        <inlineHelpText>hides intro text on the first page of the form builder</inlineHelpText>
        <label>Hide Form Builder Intro</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>disco__Hide_Mobile_Intro__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hides the Mobile Onboarding guidance.</description>
        <label>Hide Mobile Intro</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>disco__Hide_Simple_Disco_Intro__c</fullName>
        <defaultValue>false</defaultValue>
        <description>hides simple discovery page into text</description>
        <inlineHelpText>hides simple discovery page into text</inlineHelpText>
        <label>Hide Simple Discovery Rules Intro</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>disco__Hide_TB_Dep_Logic_Onboarding__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide TB Dep Logic Onboarding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>disco__Hide_TB_FL_Onboarding__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hides the Field Link Onboarding guidance for how to use field links in Template Builder if they have already seen it.</description>
        <label>Hide TB FL Onboarding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>disco__Hide_TB_LS_Onboarding__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide TB LS Onboarding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>disco__Last_Admin_Get__c</fullName>
        <description>Last Time that the Env settings were received by Mobile for this user. Set automatically when on mobile sync</description>
        <label>Last Admin Get</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>disco__Show_Advanced_Features__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows users to create linked sections and use discoveries.</description>
        <label>Show Advanced Features</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>disco__Sync_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>true if mobile user should sync when app resumes</description>
        <inlineHelpText>true if mobile user should sync when app resumes</inlineHelpText>
        <label>Sync Required</label>
        <type>Checkbox</type>
    </fields>
    <label>User Preferences</label>
</CustomObject>